--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+  <title>Home Page<.title>
+    </head>
+    <header>
+      <nav>
+        <ul>
+          <a herf="./index.html"><li>Home</li></a>
+          <a herf="./aboutme.html"><li>About Me</li></a>
+        </ul>
+      </nav>
+    </header>
 </html>
