--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <header>
       <nav>
         <ul>
-          <a herf="./index.html"><li>Home</li></a>
-          <a herf="./aboutme.html"><li>About Me</li></a>
+          <a href="./index.html"><li>Home</li></a>
+          <a href="./aboutme.html"><li>About Me</li></a>
         </ul>
       </nav>
     </header>
