--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Home Page</title>
-    </head>
-    <header>
-      <nav>
-        <ul>
-          <a href="./index.html"><li>Home</li></a>
-          <a href="./aboutme.html"><li>About Me</li></a>
+    <title>About Me</title>
+  </head>
+  <header>
+    <nav>
+      <ul>
+        <a href="./index.html"><li>Home</li></a>
+        <a href="./aboutme.html"><li>About Me</li></a>
         </ul>
-      </nav>
-    </header>
+       </nav>
+  </header>
+  <body>
 </html>
