--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
     <nav>
       <ul>
         <a href="./index.html"><li>Home</li></a>
-        <a href="./aboutme./html"><li>About Me</li></a>
+        <a href="./aboutme.html"><li>About Me</li></a>
         </ul>
        </nav>
   </header>
