--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
       <ul>
         <a href="./index.html"><li>Home</li></a>
         <a href="./aboutme.html"><li>About Me</li></a>
-        <a herf="./myresume.pdf" target="_blank"><li>My Resume</li></a>
+        <a href="./myresume.pdf" target="_blank"><li>My Resume</li></a>
         </ul>
        </nav>
   </header>
